--- a/index.html
+++ b/index.html
@@ -6,54 +6,99 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>AmPac</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <link rel="stylesheet" href="slick/slick.css">
+    <link rel="stylesheet" href="slick/slick-theme.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <div class="container">
-        <div class="banner">
-            <div class="img_01">
-                <div class="header">
-                    <a href="#">
-                        <div class="logo_h"></div>
-                    </a>
-                    <div class="nav">
-                        <ul>
-                            <li><a href="#about">About</a></li>
-                            <li><a href="#products">Products</a></li>
-                            <li><a href="#news">News</a></li>
-                            <li><a href="#content">Content</a></li>
-                            <li><a href="#" class="catalog">E-Catalog</a></li>
-                        </ul>
+        <div id="banner" class="banner">
+            <div class="header">
+                <a href="#" class="logo_h">
+                    <h1>AMPAC</h1>
+                </a>
+                <div class="nav">
+                    <ul>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#products">Products</a></li>
+                        <li><a href="#news">News</a></li>
+                        <li><a href="#content">Content</a></li>
+                        <li><a href="#" class="catalog">E-Catalog</a></li>
+                    </ul>
+                </div>
+            </div>
+            <a href="#products">
+                <div class="scroll_down"><i class="fas fa-arrow-down"></i></div>
+            </a>
+            <div class="slick">
+                <div>
+                    <div class="img_01">
+                        <div style="font-size: 92px;"><strong>AMPAC</strong></div>
+                        <div style="font-size: 92px;">Light up your life</div>
+                        <div style="font-size: 22px;margin-top: 10px;">Hong Kong Since 1993</div>
+                        <a href="#" style="margin-top: 54px;">
+                            <div class="btn01">
+                                <span>
+                                    DISCOVER MORE
+                                </span>
+                            </div>
+                        </a>
                     </div>
                 </div>
-
-                <h1>AMPAC</h1>
-                <div style="font-size: 92px;">Light up your life</div>
-                <div style="font-size: 22px;margin-top: 10px;">Hong Kong Since 1993</div>
-                <a href="#">
-                    <div class="btn01">
-                        <span>
-                            DISCOVER MORE
-                        </span>
+                <div>
+                    <div class="img_02">
+                        <div style="font-size: 92px;"><strong>LED</strong> TRACK</div>
+                        <div style="font-size: 22px;margin-top: 10px;">Clean and Consistent Light Sources</div>
+                        <a href="#" style="margin-top: 54px;">
+                            <div class="btn01">
+                                <span>
+                                    DISCOVER MORE
+                                </span>
+                            </div>
+                        </a>
                     </div>
-                </a>
-                <a href="#">
-                    <div class="scroll_down"></div>
-                </a>
+                </div>
+                <div>
+                    <div class="img_03">
+                        <div style="font-size: 92px;"><strong>LED</strong> TRACK</div>
+                        <div style="font-size: 22px;margin-top: 10px;">Clean and Consistent Light Sources</div>
+                        <a href="#" style="margin-top: 54px;">
+                            <div class="btn01">
+                                <span>
+                                    DISCOVER MORE
+                                </span>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div>
+                    <div class="img_04">
+                        <div style="font-size: 92px;"><strong>DOWNNLIGHT</strong></div>
+                        <div style="font-size: 22px;margin-top: 10px;">Prerfect Choice For Life</div>
+                        <a href="#" style="margin-top: 54px;">
+                            <div class="btn01">
+                                <span>
+                                    DISCOVER MORE
+                                </span>
+                            </div>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
 
 
-        <div class="products">
+        <div id="products" class="products">
+            <div class="page_test"></div>
             <div class="page01">
-                <div class="page01_bg"></div>
                 <div class="content">
                     <div class="page_header">
                         <div class="page_icon"></div>
                         <span>Featured Products</span>
                     </div>
-                    <div class="h2"><strong>LED</strong> Regressed Fixture</div>
+                    <div class="products_h"><strong>LED</strong> Regressed Fixture</div>
                     <div class="text">
                         Anti-glare,the light is the perfect choice for residential
                         or commercial lighting applications.
@@ -175,7 +220,6 @@
                 </div>
             </div>
             <div class="page02">
-                <div class="page02_bg"></div>
                 <div class="pic_box">
                     <div class="pic02"></div>
                     <a href="#" class="discover_hover">
@@ -188,7 +232,7 @@
                         <div class="page_icon"></div>
                         <span>Featured Products</span>
                     </div>
-                    <div class="h2"><strong>LED</strong> Regressed Fixture</div>
+                    <div class="products_h"><strong>LED</strong> Regressed Fixture</div>
                     <div class="text">
                         Anti-glare,the light is the perfect choice for residential
                         or commercial lighting applications.
@@ -272,9 +316,90 @@
                     </div>
                 </div>
             </div>
-            <div class="page03"></div>
+            <div class="page03">
+                <div class="p3_h1"><strong>VIEW</strong>MORE</div>
+                <div class="p3_h2">Ideal of sloped ceiling, wall washing, highlight artwork, task or general light etc.</div>
+
+                <div class="product_box">
+                    <button type="button" class="slick_prev">
+                        <i class="fas fa-angle-left fa-10x"></i>
+                    </button>
+                    <div class="product_items">
+                        <div class="card_box">
+                            <a href="#">
+                                <div class="item_01 item_b">
+                                    <div class="item_f">
+                                        <p>[LED Under Cabinet Family]</p>
+                                        <p><strong>AD-LED Gimbal</strong></p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="card_box">
+                            <a href="#">
+                                <div class="item_02 item_b">
+                                    <div class="item_f">
+                                        <p>LED Gimbal Family</p>
+                                        <p>AD-LED Gimbal</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="card_box">
+                            <a href="#">
+                                <div class="item_03 item_b">
+                                    <div class="item_f">
+                                        <p>[LED Under Cabinet Family]</p>
+                                        <p><strong>AD-LED Gimbal</strong></p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="card_box">
+                            <a href="#">
+                                <div class="item_01 item_b">
+                                    <div class="item_f">
+                                        <p>[LED Under Cabinet Family]</p>
+                                        <p><strong>AD-LED Gimbal</strong></p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="card_box">
+                            <a href="#">
+                                <div class="item_02 item_b">
+                                    <div class="item_f">
+                                        <p>LED Gimbal Family</p>
+                                        <p>AD-LED Gimbal</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="card_box">
+                            <a href="#">
+                                <div class="item_03 item_b">
+                                    <div class="item_f">
+                                        <p>[LED Under Cabinet Family]</p>
+                                        <p><strong>AD-LED Gimbal</strong></p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <button type="button" class="slick_next">
+                        <i class='fas fa-angle-right fa-10x'></i>
+                    </button>
+                </div>
+                <a href="#" style="margin-top: 54px;">
+                    <div class="btn01">
+                        <span>
+                            DISCOVER MORE
+                        </span>
+                    </div>
+                </a>
+            </div>
         </div>
-        <div class="about">
+        <div id="about" class="about">
             <div class="about_bg">
                 <div class="about_box">
                     <div class="about_box1">
@@ -306,7 +431,7 @@
                 </div>
             </div>
         </div>
-        <div class="news">
+        <div id="news" class="news">
             <div class="content">
                 <div class="content_box">
                     <div class="content_right">Light Up Your Life</div>
@@ -342,15 +467,9 @@
                 </div>
             </div>
         </div>
-
-
-
-
-
-
-        <div class="footer">
+        <div id="footer" class="footer">
             <div class="footer_content">
-                <a href="#"><div class="footer_btn"></div></a>
+                <a href="#"><div class="footer_btn"><i class="fas fa-arrow-up"></i></div></a>
                 <div class="logo_f"></div>
                 <div>
                     <span>
@@ -371,6 +490,38 @@
             </div>
         </div>
     </div>
+
+    <script src="js/jquery-2.2.3.min.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script>
+        $('.slick').slick({
+            arrows: false,
+            slidesToShow: 1,
+            slidesToScroll: 1,
+            autoplay: true,
+            autoplaySpeed: 3000,
+        });
+        $('.product_items').slick({
+            slidesToShow: 3,
+            slidesToScroll: 1,
+            arrows: false,
+            autoplaySpeed: 2000,
+        });
+        $('.slick_prev').click(function(){ 
+            $('.product_items').slick('slickPrev'); 
+        });
+        $('.slick_next').click(function(){ 
+            $('.product_items').slick('slickNext'); 
+        });
+        $('.card_box').mouseover(function(){
+            $(this).find('.item_b').addClass('active')
+            $(this).find('.item_f').addClass('active');
+        });
+        $('.card_box').mouseout(function(){
+            $(this).find('.item_b').removeClass('active')
+            $(this).find('.item_f').removeClass('active');
+        });
+    </script>
 </body>
 
 </html>
